remove hm empty list

--- a/spancat_tutorial/spancat_training.ipynb
+++ b/spancat_tutorial/spancat_training.ipynb
@@ -235,7 +235,7 @@
     "    span_ents = get_span_indx(labels, words, sentence)\n",
     "    #create spaCy compliant spans[span_key] dict\n",
     "    annotation = {'spans':{span_key: span_ents}}    \n",
-    "    #convert sentence and annotation into spaCy example\n",
+    "    #convert sentence and annotation into spaCy examples\n",
     "    train_data.append(Example.from_dict(nlp.make_doc(sentence), annotation))"
    ]
   },
