changing initial markdown text

--- a/twitter_api_tutorial/Your first Twitter API request.ipynb
+++ b/twitter_api_tutorial/Your first Twitter API request.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**More on the use case**\n",
     "\n",
-    "At the [Sustainable Future Mission](https://www.nesta.org.uk/sustainable-future/) at [Nesta](https://www.nesta.org.uk/), we are working on projects to help decarbonise UK homes, with special interest in greener heating systems such as heat pumps. For those who are not familiar with the concept, a heat pump is a low carbon heating system that captures heat from outside and moves it into your home.\n",
+    "The [sustainable future mission](https://www.nesta.org.uk/sustainable-future/) at [Nesta](https://www.nesta.org.uk/) is focused on projects to help decarbonise UK homes, with special interest in greener heating systems such as heat pumps. For those who are not familiar with the concept, a heat pump is a low-carbon heating system that captures heat from outside and moves it into your home.\n",
     "\n",
     "Let us have a go at collecting tweets mentioning heat pumps!"
    ]
@@ -157,8 +157,8 @@
     "    \"\"\"\n",
     "    Connects to the endpoint and requests data.\n",
     "    Returns a json with Twitter data if a 200 status code is yielded.\n",
-    "    Program stops if there is a problem with the request and sleeps if\n",
-    "    there is a temporary problem accessing the endpoint.\n",
+    "    Programme stops if there is a problem with the request and sleeps\n",
+    "    if there is a temporary problem accessing the endpoint.\n",
     "    \"\"\"\n",
     "    response = requests.request(\n",
     "        \"GET\", url=endpoint_url, headers=headers, params=parameters\n",
@@ -283,11 +283,11 @@
    "id": "47963601",
    "metadata": {},
    "source": [
-    "***Here we are! We have collected our first 10 tweets*** 💪🤓\n",
+    "**Here we are! We have collected our first 10 tweets** 💪🤓\n",
     "\n",
     "In the next notebook, **\"Tweets from the past 7 days\"**, we will build on this code and use the recent search endpoint to its full potential to retrieve the remaining tweets from the last 7 days.\n",
     "\n",
-    "This code was inspired in official Twitter code in this [repo](https://github.com/twitterdev/Twitter-API-v2-sample-code)."
+    "This code was inspired in official Twitter code in this [GitHub repo](https://github.com/twitterdev/Twitter-API-v2-sample-code)."
    ]
   },
   {
@@ -301,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('exploration_recc_complaints')",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +315,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4fe1efbf936c83866a89d8e9c252ce8658e499fc60c55263e5ba75244106e72f"
+   }
   }
  },
  "nbformat": 4,
