changing initial markdown text

--- a/twitter_api_tutorial/Tweets from the past 7 days.ipynb
+++ b/twitter_api_tutorial/Tweets from the past 7 days.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**More on the use case**\n",
     "\n",
-    "At the [Sustainable Future Mission](https://www.nesta.org.uk/sustainable-future/) at [Nesta](https://www.nesta.org.uk/), we are working on projects to help decarbonise UK homes, with special interest in greener heating systems such as heat pumps. For those who are not familiar with the concept, a heat pump is a low carbon heating system that captures heat from outside and moves it into your home.\n",
+    "The [sustainable future mission](https://www.nesta.org.uk/sustainable-future/) at [Nesta](https://www.nesta.org.uk/) is focused on projects to help decarbonise UK homes, with special interest in greener heating systems such as heat pumps. For those who are not familiar with the concept, a heat pump is a low-carbon heating system that captures heat from outside and moves it into your home.\n",
     "\n",
     "What is the sentiment on heat pumps *versus* gas boilers? Have peoples' opinions towards heat pumps changed with time? Which types of users mention heat pumps on Twitter? These are all questions we can answer once we start analysing Twitter data on these topics.\n",
     "\n",
@@ -187,8 +187,8 @@
     "    \"\"\"\n",
     "    Connects to the endpoint and requests data.\n",
     "    Returns a json with Twitter data if a 200 status code is yielded.\n",
-    "    Program stops if there is a problem with the request and sleeps if\n",
-    "    there is a temporary problem accessing the endpoint.\n",
+    "    Programme stops if there is a problem with the request and sleeps\n",
+    "    if there is a temporary problem accessing the endpoint.\n",
     "    \"\"\"\n",
     "    response = requests.request(\n",
     "        \"GET\", url=endpoint_url, headers=headers, params=parameters\n",
@@ -383,9 +383,9 @@
    "id": "47963601",
    "metadata": {},
    "source": [
-    "***We have reached the end of this tutorial on how to collect Twitter data from the past 7 days*** 💪🤓\n",
+    "**We have reached the end of this tutorial on how to collect Twitter data from the past 7 days** 💪🤓\n",
     "\n",
-    "This code was inspired in official Twitter code in this [repo](https://github.com/twitterdev/Twitter-API-v2-sample-code)."
+    "This code was inspired in official Twitter code in this [GitHub repo](https://github.com/twitterdev/Twitter-API-v2-sample-code)."
    ]
   },
   {
