small change to connect_to_endpoint function

--- a/twitter_api_tutorial/Your first Twitter API request.ipynb
+++ b/twitter_api_tutorial/Your first Twitter API request.ipynb
@@ -163,18 +163,19 @@
     "    response = requests.request(\n",
     "        \"GET\", url=endpoint_url, headers=headers, params=parameters\n",
     "    )\n",
-    "    if response.status_code != 200:\n",
-    "        if response.status_code >= 400 and response.status_code < 500:\n",
+    "    response_status_code = response.status_code\n",
+    "    if response_status_code != 200:\n",
+    "        if response_status_code >= 400 and response_status_code < 500:\n",
     "            raise Exception(\n",
     "                \"Cannot get data, the program will stop!\\nHTTP {}: {}\".format(\n",
-    "                    response.status_code, response.text\n",
+    "                    response_status_code, response.text\n",
     "                )\n",
     "            )\n",
     "        \n",
     "        sleep_seconds = random.randint(5, 60)\n",
     "        print(\n",
     "            \"Cannot get data, your program will sleep for {} seconds...\\nHTTP {}: {}\".format(\n",
-    "                sleep_seconds, response.status_code, response.text\n",
+    "                sleep_seconds, response_status_code, response.text\n",
     "            )\n",
     "        )\n",
     "        time.sleep(sleep_seconds)\n",
