small change to connect_to_endpoint function

--- a/twitter_api_tutorial/Tweets from the past 7 days.ipynb
+++ b/twitter_api_tutorial/Tweets from the past 7 days.ipynb
@@ -193,18 +193,19 @@
     "    response = requests.request(\n",
     "        \"GET\", url=endpoint_url, headers=headers, params=parameters\n",
     "    )\n",
-    "    if response.status_code != 200:\n",
-    "        if response.status_code >= 400 and response.status_code < 500:\n",
+    "    response_status_code = response.status_code\n",
+    "    if response_status_code != 200:\n",
+    "        if response_status_code >= 400 and response_status_code < 500:\n",
     "            raise Exception(\n",
     "                \"Cannot get data, the program will stop!\\nHTTP {}: {}\".format(\n",
-    "                    response.status_code, response.text\n",
+    "                    response_status_code, response.text\n",
     "                )\n",
     "            )\n",
     "        \n",
     "        sleep_seconds = random.randint(5, 60)\n",
     "        print(\n",
     "            \"Cannot get data, your program will sleep for {} seconds...\\nHTTP {}: {}\".format(\n",
-    "                sleep_seconds, response.status_code, response.text\n",
+    "                sleep_seconds, response_status_code, response.text\n",
     "            )\n",
     "        )\n",
     "        time.sleep(sleep_seconds)\n",
@@ -342,8 +343,8 @@
     "- We update the query parameters query field according to the rule in question;\n",
     "- We connect to the endpoint as in the previous example and process the data, using the process_twitter_data() function;\n",
     "- Then the program sleeps for 5 seconds. This is necessary not to surpass the rate limit. For this specific endpoint and Essential access level, the rate limit is 180 requests/15 minutes per user, which translates into 1 request every 5 seconds so we need to wait for at least 5 seconds before we make another request.\n",
-    "- If json_response['meta'] has a next_token (the pagination token) field then it means that we have not reached the final page of tweets, so we add it as a query parameter and collect more tweets;\n",
-    "- We repeat the process until  json_response['meta'] no longer contains  next_token field."
+    "- If json_response[\"meta\"] has a next_token (the pagination token) field then it means that we have not reached the final page of tweets, so we add it as a query parameter and collect more tweets;\n",
+    "- We repeat the process until  json_response[\"meta\"] no longer contains  next_token field."
    ]
   },
   {
