--- a/innovation_taxonomy/taxonomy_demo.ipynb
+++ b/innovation_taxonomy/taxonomy_demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5b164e70",
+   "id": "3dd422fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cff1d85",
+   "id": "44b37967",
    "metadata": {},
    "source": [
     "# Load and preview a taxonomy "
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3eb8484",
+   "id": "a7dbf28b",
    "metadata": {},
    "source": [
     "The taxonomy is saved as a polars dataframe containing the entire taxonomy. The taxonomy is nested, and the nesting structure is represented using \"_\". The top level (\"Level_1\") is represented as a single integer (cast as a string) (ex: '0'). All of the groups at the next level within group 0 would be represented as '0_1', '0_2', '0_3', etc.\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a43a35d2",
+   "id": "46913771",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bf2e2e5",
+   "id": "6ffd7698",
    "metadata": {},
    "source": [
     "# Explore the Taxonomy\n",
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9f930a46",
+   "id": "f3d8c73f",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "707af16b",
+   "id": "136c61f1",
    "metadata": {},
    "source": [
     "### Plot the distribution of the number of entities per group at different levels"
@@ -137,16 +137,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f9ccacc",
+   "id": "d9cb4fb4",
    "metadata": {},
    "source": [
-    "This notebook uses the postprocessed cooccurrence taxonomy described in the notebook, and is therefore relatively evenly distributed. Run the same code with the imbalanced or centroids taxonomies to compare. "
+    "This notebook uses the postprocessed cooccurrence taxonomy described in the article and is therefore relatively evenly distributed. Run the same code with the imbalanced or centroids taxonomies to compare. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "308fa21b",
+   "id": "12f77eae",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "af49ca78",
+   "id": "efd31e3f",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91f79065",
+   "id": "9365966e",
    "metadata": {},
    "source": [
     "# Explore taxonomy group names"
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afd1ef00",
+   "id": "acc7ab7b",
    "metadata": {},
    "source": [
     "We provide the names of a taxonomy at a given level using either the top 5 entities in documents in our training corpus or chatgpt (as described in the article.) Names are only provided for the co-occurrence taxonomy at the top 3 levels (disciplines, areas, domains). \n",
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "655a6986",
+   "id": "5b7d9531",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "779d864a",
+   "id": "56264756",
    "metadata": {},
    "source": [
     "### Look at the names for the discipline plotted above (discipline 13)"
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "95d9e034",
+   "id": "c6748ccc",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a89e956",
+   "id": "8c7c049f",
    "metadata": {},
    "source": [
     "### Look at the names for several of the domains within discipline 13"
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0c74e6db",
+   "id": "93e05ffb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "308cc837",
+   "id": "426d4b8c",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "96e18b92",
+   "id": "d5798b59",
    "metadata": {},
    "outputs": [
     {
